--- a/src/Footer.css
+++ b/src/Footer.css
@@ -24,26 +24,32 @@
 .weebly h1{
     color: rgb(123, 126, 126);
     font-size: 14px;
+    margin-left: 50px;
+    margin-top: 20%
 }
 
 .ser h1{
     color: rgb(123, 126, 126);
     font-size: 14px;
+    margin-left: 50px;
+    margin-top: 20%;
 }
 
 .show h1{
     color: rgb(123, 126, 126);
     font-size: 14px;
+    margin-left: 50px;
+    margin-top: 20%;
 }
 
 .icon img{
     width: 50px;
     height: 50px;
-    /* margin-top: 70%; */
+   margin-left: 17%;
 }
 
 hr{
-    width: 400px;
+    width: 500px;
     margin-top: 30%;
-    margin-right: 180px;
+    margin-right: 140px;
 }
